# warper

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
src/warper/: __init__.py
tests/: test_embedder.py
